--- a/index.html
+++ b/index.html
@@ -15,6 +15,6 @@
 </head>
 <body>
     <canvas></canvas>
-    <script src="canvas.js"></script>
+    <script src="js/app.js"></script>
 </body>
 </html>
